# tide-jsx

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: basic.rs
impl/: Cargo.toml
impl/src/: element.rs  function_component.rs  lib.rs  tags.rs
render/: Cargo.toml
render_macros/: Cargo.toml
render_tests/: Cargo.toml
src/: fragment.rs  html.rs  lib.rs  numbers.rs  simple_element.rs  text_element.rs
tests/: lib.rs
tests/ui/: unclosed-tag.rs
tests/ui/fail/: unclosed-tag-complex.rs  unclosed-tag.rs  unclosed-tag.stderr  unexpected-attribute.rs
