[package]
name = "tide-jsx"
version = "0.3.2"
authors = ["pyrossh", "Gal Schlezinger <gal@spitfire.co.il>"]
edition = "2021"
description = "A safe and simple template engine with the ergonomics of JSX"
readme = "README.md"
repository = "https://github.com/pyrossh/tide-jsx"
keywords = ["jsx", "rsx", "html", "render", "template"]
categories = ["template-engine"]
license = "MIT"

[dependencies]
tide = "0.16.0"
tide-jsx-impl = { path = "impl", version = "0.2.1" }

[dev-dependencies]
pretty_assertions = "0.6"
async-std = { version = "1.9.0", features = ["attributes"] }
trybuild = "1.0"
