[package]
name = "tide-jsx-impl"
version = "0.1.0"
authors = ["Gal Schlezinger <gal@spitfire.co.il>"]
edition = "2021"
description = "The macros needed for `render`"
readme = "../README.md"
repository = "https://github.com/pyrossh/tide-jsx"
keywords = ["macro"]
categories = []
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"

[dev-dependencies]
#render = { path = "../render", version = "0.3" }
pretty_assertions = "0.6"
